agregue el html de la pagina y algo de css

--- a/index.html
+++ b/index.html
@@ -5,18 +5,101 @@
 	<title>Mini Market O.P</title>
 	<meta charset="utf-8"/>
 	<meta name="description" content="En Mini Market O.P podrás encontrar frutas y verduras de la mejor calidad al mejor precio, también contamos con una amplia variedad de víveres."/>
+	<link rel="stylesheet" type="text/css" href="./css/estilos.css">
 </head>
+
 <body>
-<h1>¿Quienes somos?</h1>
-<p>Somos un equipo que busca lo mejor para ti y los tuyos, con la mejor calidad ofrecemos frutas y verduras traidas directamente del campo sin intermediaros, a su vez contamos con una amplia variedad de víveres. </p>
-<h2>En Mini Market O.P pensamos en tu comodidad</h2>
-<p><em>Es por ello, que encuentras todo lo que necesitas en un solo lugar, con la comodidad de un <strong>ambiente sano y una atención de calidad.</strong></em></p>
-<img src="frutas.jpeg"
-alt="frutas frescas para degustar con tu familia">
-<img src="vegetales.jpeg"
-alt="Vegetales que podrás utilizar para todo tipo de comidas caseras y profesonales">
-<!-- PREGUNTAR POR EL ATRIBUTO "CLASS"
-     PREGUNTAR POR EL ATRIBUTO "BOOLEANOS" -->
-<p>Aquí encontraras <a href="https://www.cocinacaserayfacil.net/recetas-cocina-faciles-rapidas/" title= "¡QUE VIVA LA COCINA!" target=" _blank"> varias recetas </a>  que te servirán de insiración</p>
+
+	<ul> 
+		<li><a href="#">Inicio</a> </li>
+		<li><a href="#">Servicios</a></li>
+		<li><a href="#">Guía de compra</a></li>
+		<li><a href="#">Productos</a></li>
+		<li><a href="#">Programa de afiliación</a></li>
+		<li><a href="#">Contacto</a></li>
+	</ul>
+
+	<div>
+		<h1>Mini Market O.P</h1>
+			<p>Somos un equipo que busca lo mejor para ti y los tuyos, con la mejor calidad ofrecemos frutas y verduras traidas directamente del campo sin intermediaros,a su vez contamos con una amplia variedad de víveres. </p>
+		<h2>En Mini Market O.P pensamos en tu comodidad</h2>   
+			<p><em>Es por ello, que encuentras todo lo que necesitas en un solo lugar, con la comodidad de un <strong>ambiente sano y una atención de calidad.</strong></em></p>
+		
+		<img src="imagenes/frutas.jpeg" alt="frutas frescas para degustar con tu familia">
+		<img src="imagenes/vegetales.jpeg" alt="Vegetales que podrás utilizar para todo tipo de comidas caseras y profesonales">
+
+		<p>Aquí encontraras <a href="https://www.cocinacaserayfacil.net/recetas-cocina-faciles-rapidas/" title= "¡QUE VIVA LA COCINA!" target=" _blank"> varias recetas </a>  que te servirán de insiración</p>
+	</div>	
+
+	<div>
+		<h1>Servicios</h1>
+			<p>Mejora tu calidad de compra con la amplia variedad de servcios que ofrecemos.</p>
+				<h2>Atención de calidad</h2>
+				<p>Aquí podrás contar con una excelente atención al cliente, nuestro personal está capacitado para ayudarte a encontrar lo que buscas de manera eficiente y rápida.<br>
+				Para asegurarnos de esto, puedes entrar a nuestro sitio web y calficar su atención hacia ti.</p>
+				<h2>Venta de frutas, verduras y vegetales</h2>
+				<p>Nuestra amplia variedad de frutas y vegetales te permitiran hacer de tus platos una maravilla culinaria, ya sea que tengas conocimientos o no en la cocina, las frutas y vegetales que ofrecemos para ti son traídas directamente del campo y sin intermediarios, lo cual preserva su frescura. <br>
+				Con lo cual, si tienes dones en el arte culinario, tus recetas estarán hechas con amor y calidad.<br>
+				Por otra parte, si lo tuyo no es cocinar y solo haces lo necesario, puedes estar tranquilo, las recetas sencillas con alimentos de calidad también quedan delciosas.</p>
+				<h2>Venta de Víveres</h2>
+				<p>Complementamos tu compra con una excelente variedad de víveres.<br>
+					Los productos locales e importados hacen parte de nuestro catálago de ventas.<br>
+				Busca en nuestro menú, la pestaña de "productos", allí encontrarás toda la disponibilidad. </p>
+				<h2>Venta de productos de limpieza e higiene personal</h2>
+				<p>Para el cuidado de tu hogar y para tu uso personal.</p>
+				<h2>Guía de compra online</h2>
+				<p>Te horientamos en tus compras, te ofrecemos ideas, inspiración y conocimientos para que tomes las mejores deciones al momento de realizar tus compras por internet. <br>
+				La consigues en el menú, la pestaña de "Guía de compra".</p>
+				<h2>Delivery</h2>
+				<span><p>¡Working progress!</p></span>
+		</div>
+
+		<div>
+
+			<h1>Guía de Compra</h1>
+				<p>Para que puedas comprar con conocimiento y seguridad, te brindamos una guía de compra que te servirá como referencia, en ella podrás encontrar: definiciones, recetas, inspiración e ideas, y tips de compras.</p>
+				<P>Definiciones:</P>
+				<p>Recetas:</p>
+				<p>Inspiración e ideas:</p>
+				<p>Tips de compras:</p>
+		</div>
+
+		<div>
+			<h1>Productos</h1>
+			<p>Catálogos de todos los productos disponibles.</p>
+			<!---Buscar la forma de colocar categorías --> 
+		</div>
+
+		<div>
+			<h1>Programa de afiliación</h1>
+
+			<p>El programa de afiliación te brinda la oportunidad de ser parte del eqipo Market O.P.</p>
+			<P>Tiene beneficios tales como, encontrar ofertas, asesoria personalizada, acumulación de puntos canjeables, entre otras cosas.</P>
+			<p>No te pierdas la oportunidad y ¡registrate ya!</p>
+
+			<form action="registrse.php" method="get">
+
+				<p>Registrse</p>
+					<p>Nombre: <input type="text" name="Nombre" size="10" required></p>
+					<p>Apellido:<input type="text" name="Apellido" size="10" required></p>
+					<p>Edad:<input type="text" name="Edad" size="5" required></p>
+					<p>Correo electrónico:<input type="email" name="Correo" size="25" required></p>
+					<p>Contraseña:<input type="password" name="Contraseña" size="15" required></p>
+					<p>Confirmar contraseña:<input type="password" name="Contraseña" size="15" required></p>
+					<p>Acepto los terminos y condiciones de las políticas de privacidad. <input type="checkbox" name="casilla" required=""></p>
+				<p> <input type="submit" name="Enviar"></p>
+			</form>
+		
+
+			<form action="Registrse.php" method="get">
+
+				<p>Inciar sección</p>
+					<p>Correo electrónico:<input type="text" name="email" size="25" required></p>
+					<p>Contraseña:<input type="password" name="Contraseña" size="15" required></p>
+				<p> <input type="submit" name="Enviar"></p>
+			</form>
+			
+
+		</div>
 </body>
 </html>
