--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	<ul> 
 		<li><a href="#">Inicio</a> </li>
-		<li><a href="#">Servicios</a></li>
-		<li><a href="#">Guía de compra</a></li>
+		<li><a href="#servcios">Servicios</a></li>
+		<li><a href="#guiadecompra">Guía de compra</a></li>
 		<li><a href="#">Productos</a></li>
 		<li><a href="#">Programa de afiliación</a></li>
 		<li><a href="#">Contacto</a></li>
@@ -23,7 +23,7 @@
 		<h1>Mini Market O.P</h1>
 			<p>Somos un equipo que busca lo mejor para ti y los tuyos, con la mejor calidad ofrecemos frutas y verduras traidas directamente del campo sin intermediaros,a su vez contamos con una amplia variedad de víveres. </p>
 		<h2>En Mini Market O.P pensamos en tu comodidad</h2>   
-			<p><em>Es por ello, que encuentras todo lo que necesitas en un solo lugar, con la comodidad de un <strong>ambiente sano y una atención de calidad.</strong></em></p>
+			<p class="labia"><em>Es por ello, que encuentras todo lo que necesitas en un solo lugar, con la comodidad de un <strong>ambiente sano y una atención de calidad.</strong></em></p>
 		
 		<img src="imagenes/frutas.jpeg" alt="frutas frescas para degustar con tu familia">
 		<img src="imagenes/vegetales.jpeg" alt="Vegetales que podrás utilizar para todo tipo de comidas caseras y profesonales">
@@ -31,7 +31,7 @@
 		<p>Aquí encontraras <a href="https://www.cocinacaserayfacil.net/recetas-cocina-faciles-rapidas/" title= "¡QUE VIVA LA COCINA!" target=" _blank"> varias recetas </a>  que te servirán de insiración</p>
 	</div>	
 
-	<div>
+	<div id="servcios">
 		<h1>Servicios</h1>
 			<p>Mejora tu calidad de compra con la amplia variedad de servcios que ofrecemos.</p>
 				<h2>Atención de calidad</h2>
@@ -54,14 +54,16 @@
 				<span><p>¡Working progress!</p></span>
 		</div>
 
-		<div>
+		<div id="guiadecompra">
 
-			<h1>Guía de Compra</h1>
+			    <h1 class="gdc">Guía de Compra</h1>
 				<p>Para que puedas comprar con conocimiento y seguridad, te brindamos una guía de compra que te servirá como referencia, en ella podrás encontrar: definiciones, recetas, inspiración e ideas, y tips de compras.</p>
 				<P>Definiciones:</P>
 				<p>Recetas:</p>
 				<p>Inspiración e ideas:</p>
 				<p>Tips de compras:</p>
+			
+
 		</div>
 
 		<div>
