--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
 	<link rel="stylesheet" type="text/css" href="./css/estilos.css">
 </head>
 
-<body>
+<body
 
-	<ul> 
-		<li><a href="#">Inicio</a> </li>
-		<li><a href="#servcios">Servicios</a></li>
-		<li><a href="#guiadecompra">Guía de compra</a></li>
-		<li><a href="#">Productos</a></li>
-		<li><a href="#">Programa de afiliación</a></li>
-		<li><a href="#">Contacto</a></li>
-	</ul>
-
+	<div>
+		<ul> 
+		<div class="Inicio"><li><a href="#">Inicio</a></li></div>
+		<div class="servcios"><li><a href="#servcios">Servicios</a></li></div>
+		<div class="guiadecompra"><li><a href="#guiadecompra">Guía de compra</a></li></div>
+		<div class="productos"><li><a href="#productos">Productos</a></li></div>
+		<div class=" programadeafiliación"><li><a href="#programadeafiliación">Programa de afiliación</a></li></div>
+		<div class="Contacto"><li><a href="#Contacto">Contacto</a></li></div>
+		</ul>
+	</div>
 	<div>
 		<h1>Mini Market O.P</h1>
 			<p>Somos un equipo que busca lo mejor para ti y los tuyos, con la mejor calidad ofrecemos frutas y verduras traidas directamente del campo sin intermediaros,a su vez contamos con una amplia variedad de víveres. </p>
 		<h2>En Mini Market O.P pensamos en tu comodidad</h2>   
-			<p class="labia"><em>Es por ello, que encuentras todo lo que necesitas en un solo lugar, con la comodidad de un <strong>ambiente sano y una atención de calidad.</strong></em></p>
+			<p class="labia"><em>Es por ello, que encuentras <br>todo lo que necesitas en un solo lugar,<br> con la comodidad de un <strong>ambiente sano <br> y una atención de calidad.</strong></em></p>
 		
 		<img src="imagenes/frutas.jpeg" alt="frutas frescas para degustar con tu familia">
 		<img src="imagenes/vegetales.jpeg" alt="Vegetales que podrás utilizar para todo tipo de comidas caseras y profesonales">
@@ -66,13 +67,15 @@
 
 		</div>
 
-		<div>
+		<div id="productos">
+
 			<h1>Productos</h1>
 			<p>Catálogos de todos los productos disponibles.</p>
 			<!---Buscar la forma de colocar categorías --> 
 		</div>
 
-		<div>
+		<div id="programadeafiliación">
+
 			<h1>Programa de afiliación</h1>
 
 			<p>El programa de afiliación te brinda la oportunidad de ser parte del eqipo Market O.P.</p>
